--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/jsonwebtoken": "^8.5.8",
     "@types/morgan": "^1.9.3",
     "@types/multer": "^1.4.7",
+    "@types/node": "^18.0.6",
     "@types/nodemailer": "^6.4.4",
     "@types/sharp": "^0.30.2",
     "ftp-deploy": "^2.4.2",
@@ -26,6 +27,7 @@
     "typescript": "^4.6.3"
   },
   "dependencies": {
+    "aws-sdk": "^2.1179.0",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dateformat": "^5.0.3",
